tests/base/parser/bad/lib/lmodule-library-cid-let-id-eq-hexlit-with.scillib
scilla_version 0

library TestLib

(* Typo | instead of l *)
let a = 0x1234
|et b = 0x2345

